--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harp",
-  "version": "0.17.1",
+  "version": "0.17.2",
   "description": "Static web server with built in preprocessing",
   "author": "Brock Whitten <brock@chloi.io>",
   "contributors":
@@ -35,7 +35,7 @@
   "dependencies": {
     "terraform": "georgzoeller/terraform",
     "commander": "2.8.1",
-    "connect": "3.4.0",
+    "connect": "~2.9.0",
     "async": "1.2.1",
     "fs-extra": "0.20.0",
     "mime": "1.3.4",
